# simple-ref-fn

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  ref_fn.rs  ref_fn_mut.rs  ref_send_fn_mut.rs  ref_sync_fn.rs  static_ref_function.rs  static_ref_mut_function.rs
